<resources>
    <string name="amp" public="false" translatable="false">e3b51457136ad623213ade89a42a288f</string>
    <string name="appsflyer_key" public="false" translatable="false">4B6DDdYFw55PmVPTwr8Ski</string>
    <string name="uxcam_key" public="false" translatable="false">obijrn00q2aip9z</string>
    <string name="app_name" translatable="false">Stax</string>
    <string name="payment_root_url" translatable="false">https://stax.me/pay?%1$s</string>
    <string name="payment_url_end" translatable="false">%1$s-%2$d-%3$s-%4$d</string>
    <string name="root_url" translatable="false">https://www.usehover.com</string>
    <string name="api_url" translatable="false">https://www.usehover.com/stax_api</string>
    <string name="maathai_api_url" translatable="false">https://www.usehover.com/api</string>
    <string name="channels_endpoint" translatable="false">/channels?bookmarked=true</string>
    <string name="users_endpoint" translatable="false">/stax_users</string>
    <string name="tips_table" translatable="false">financial_tips</string>
    <string name="referee_endpoint" translatable="false">/set_referee</string>
    <string name="stax_market_playstore_link" translatable="false">https://stax.onelink.me/nR0j/fb15b3f2</string>
    <string name="stax_url_playstore_review_link" translatable="false">http://play.google.com/store/apps/details?id=com.hover.stax&amp;showAllReviews=true</string>
    <string name="stax_nolt_url" translatable="false">https://stax.nolt.io/</string>
    <string name="receive_stax_updates_url" translatable="false">https://416e906b.sibforms.com/serve/MUIEAAS88NDe6oTn7nl8YrIqgutsJ_GgyCYRWVsZ-S54quVNmBhvpsu70WpNXrZd-n6H5r8m1ZRfuTl8ckiQrB4sLIdNSx0Y_DFZ7_hQGCDv9PG6N0ncsHwWW3OYsMlPMHgQSR6OZf8xK8HC-NA3p3T71Pv1Coy_n9oiDRwIu7HCryUfDtfHr11mXSQ5S3JwcOd8cN7FL1ewDRqu</string>
    <string name="mixpanel_token" translatable="false">82efeb23b6d38509989f592c8f4b21c2</string>
    <string name="bounty_transactions_endpoint" translatable="false">/get_bounty_results?device_id=%1$s</string>
    <string name="google_server_client_id" translatable="false">1098235122453-5u1hct3brr4t626317k9fgjkkfdmsbvs.apps.googleusercontent.com</string>
    <string name="privacy_policy_link" translatable="false">https://docs.usehover.com/staxpolicy</string>
    <string name="default_notification_channel_id">app.hover.stax</string>
    <string name="terms_and_condition_url">https://stax.me/blog/airtime-bonuses-for-staxxers-in-kenya/</string>
    <string name="stax_handle" translatable="false">\@joinstax</string>
    <string name="hsdk_app_name_literal">*Stax#</string>
    <string name="nav_home">Home</string>
    <string name="nav_balance_and_history">Balance and history</string>
    <string name="nav_balances">Balances</string>
    <string name="nav_sim">SIMs</string>
    <string name="nav_history">History</string>
    <string name="nav_get_paid">Get Paid</string>
    <string name="nav_link_account">Link an account</string>
    <string name="nav_airtime">Buy Airtime</string>
    <string name="nav_transfer">Transfer</string>
    <string name="nav_merchant">Buy Goods</string>
    <string name="nav_new_request">New Request</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account_detail">Account Details</string>
    <string name="nav_transaction">Transaction Details</string>
    <string name="nav_schedule">Schedule Details</string>
    <string name="nav_request">Request Details</string>
    <string name="nav_transfer_detail">Transfer Details</string>
    <string name="lang_cardhead">Choose a language</string>
    <string-array name="supported_lang_codes">
        <item>am</item>
        <item>en</item>
        <item>fr</item>
        <item>sw</item>
        <item>so</item>
        <item>om</item>
    </string-array>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_dontsave">Abandon</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_send">Send</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_back">Back</string>
    <string name="btn_test">Test</string>
    <string name="btn_done">Done</string>
    <string name="btn_google_signin">Sign in With Google</string>
    <string name="add_account">Link an account</string>
    <string name="learn_more">Learn more</string>
    <string name="add_accounts_help_title">Adding accounts to Stax</string>
    <string name="add_accounts_help_info">Stax works with your existing money accounts to give you control. USSD is used to interact with accounts connected to your SIM card.\n\nStax never holds money and cannot create accounts for you.\n\nSecurity is our top concern: your SIM card must always be present in your phone to interact with your accounts and you must always enter your PIN to initiate a transaction.</string>
    <string name="link_x">Link %1$s</string>
    <string name="link_explain">This will allow you to see your balance and move money from Stax. Stax uses USSD so that you can have access to your money even without an internet connection. Stax does not hold money, and updating your balance or moving money always requires both your linked SIM card and PIN.</string>
    <string name="link_to_sim">This account will use the following SIM:</string>
    <string name="link_sim_error">Could not detect a SIM that works with this service.</string>
    <string name="link_sim_error_details">You can add the account but you will not be able to check balance or move money until you insert the correct SIM. If you think this is a mistake you can <u>report the issue</u>.</string>
    <string name="sims_detected">The following SIM cards were detected:</string>
    <string name="ask_check_balance">To finish linking your account check your balance.</string>
    <string name="check_balance_btn">Check account balance</string>
    <string name="save_without_sim_btn">Add account without SIM</string>
    <string name="skip_balance_btn">Skip balance check</string>
    <string name="create_pin">Create a PIN for your USDC wallet</string>
    <string name="confirm_pin">Re-enter your PIN to confirm</string>
    <string name="create_account">Create account</string>
    <string name="account_added">Account added</string>
    <string name="create_usdc_explain_title">What to know about creating a USDC account</string>
    <string name="usdc_bullet_1">This is your wallet</string>
    <string name="usdc_bullet_2">Don\'t lose your security key</string>
    <string name="usdc_explain_1">You can access your money on any platform that supports Stellar USDC such as Coinbase or Binance. Stax does not keep your credentials and cannot directly access your money.</string>
    <string name="usdc_explain_2">Your key will be saved to your Google account Drive storage and your PIN will be required to access it in Stax. You must have both your key and PIN to access your money.</string>
    <string name="continue_to_create_pin">Continue to create your PIN</string>
    <string name="create_account_success">Success! Your USDC wallet has been created.</string>
    <string name="create_account_error">Could not contact server. Please make sure you are online and try again.</string>
    <string name="usdc_account_1">Your wallet address is %s</string>
    <string name="usdc_account_1_explain">You can use this to receive money on any platform that supports USDC.</string>
    <string name="usdc_account_1_action">Copy wallet address</string>
    <string name="address_copied">Copied address to clipboard.</string>
    <string name="usdc_account_2_explain">Your key has been saved to your Google account Drive storage. You may want to save a backup somewhere else or with someone you trust.</string>
    <string name="usdc_account_2_action">Download key to local storage</string>
    <string name="key_downloaded">Key saved.</string>
    <string name="key_download_error">Could not save key, please try again.</string>
    <string name="stax_tagline">Move money without stress</string>
    <string name="splash_screen_img_desc">Stax background</string>
    <string name="slide_1_title">Secure. Fast. Convenient</string>
    <string name="slide_1_desc">Send money and buy airtime offline using your existing bank and momo accounts</string>
    <string name="onboarding_link_accounts">Link your accounts now</string>
    <string name="onboarding_v1_slide1_title">Stax works offline</string>
    <string name="onboarding_v1_slide2_title">Send money</string>
    <string name="onboarding_v1_slide3_title">Request money</string>
    <string name="onboarding_v1_slide4_title">Buy airtime</string>
    <string name="onboarding_v1_general_desc">Continue with Google to enjoy the full Stax experience</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="slide2_desc">Transfer money securely and easily. No extra charges.</string>
    <string name="slide3_desc">Get paid faster by clients and friends with a simple link.</string>
    <string name="slide4_desc">Top up airtime in seconds for you and your loved ones.</string>
    <string name="slide1_desc">Use Stax with or without the internet. Anytime. Anywhere.</string>
    <string name="use_stax_no_sigin">Use Stax without sign in</string>
    <string name="termsOfServiceFullLabel">By continuing, you agree to Stax\'s Terms of service.</string>
    <string name="privacyPolicyFullLabel">See how we use your data in our Privacy Policy.</string>
    <string name="welcome_to_stax">Hello, welcome to Stax.</string>
    <string name="welcome_to_stax_fullContent">If you\’re new to Stax you may have some questions about how the app works. We\'ll help clarify some of these. Select the most relevant option to you.</string>
    <string name="onboarding_variant_2_question1">Is Stax for me?</string>
    <string name="skip_prefix">Already know about stax?</string>
    <string name="cta_paybill">Pay a bill</string>
    <string name="channels_error_nodata">Please turn on data to load services.</string>
    <string name="link_account">Link account</string>
    <string name="link_another"><u>+ Link another account</u></string>
    <string name="account_number_label">Account number</string>
    <string name="pay_with_label">Pay with</string>
    <string name="paid_with_label">Paid with</string>
    <string name="transfer_amount_label">Amount</string>
    <string name="account_label">Account number</string>
    <string name="note_cardhead">Description</string>
    <string name="recipient_label">To</string>
    <string name="transfer_fee_label">Fee</string>
    <string name="req_cardhead">Request money</string>
    <string name="reqfrom_label">To</string>
    <string name="requester_number_label">Account</string>
    <string name="date_label">Date</string>
    <string name="repeatfreq_label">How often?</string>
    <string name="end_label">End date</string>
    <string name="repeatnum_label">How many times?</string>
    <string name="institution_label">Recipient institution</string>
    <string name="id_label">Transaction ID</string>
    <string name="stax_id_label">Stax ID</string>
    <string name="transaction_fee">%1$s transaction fee</string>
    <string name="status_label">Status</string>
    <string name="type_label">Type</string>
    <string name="transaction_status_info_title">About transaction status</string>
    <string name="transaction_status_info_content">Stax works by sending USSD messages in the background. Transaction status depends on your mobile money provider and bank availability. We do not hold money.</string>
    <string name="contact_stax_cardhead">Get in touch</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="receive_stax_updates">Receive Stax updates</string>
    <string name="test_mode_enabled">Test mode engaged</string>
    <string name="business_number_label">Business number</string>
</resources>