<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/navigation_back"
		android:icon="@drawable/ic_arrow_back"
		app:showAsAction="always"
		android:visible="false"
		android:title="@string/btn_back" />

	<item
	    android:id="@+id/navigation_home"
	    android:icon="@drawable/ic_home"
	    app:showAsAction="always"
	    android:title="@string/nav_home" />

	<item
	    android:id="@+id/navigation_balance"
	    android:icon="@drawable/ic_baseline_list_24"
	    app:showAsAction="always"
	    android:title="@string/nav_balance_and_history" />

	<item
	    android:id="@+id/navigation_settings"
	    android:icon="@drawable/ic_settings"
	    app:showAsAction="always"
	    android:title="@string/nav_settings" />
</menu>
