<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_13">

    <TableRow android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/date_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_date"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>


    <TableRow android:layout_marginTop="@dimen/margin_18">

        <com.hover.stax.views.StaxInfoTextView
                android:text="@string/status_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16"
                app:infoContent="@string/transaction_status_info_content"
                app:infoTitle="@string/transaction_status_info_title" />

        <TextView
                android:id="@+id/details_stax_status"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/margin_3"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical|end"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>

    <TableRow
            android:id="@+id/reasonRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/reason_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_stax_reason"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>


    <TableRow android:layout_marginTop="@dimen/margin_18">

        <TextView
            android:text="@string/paid_with_label"
            android:textColor="@color/offWhite"
            android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_stax_account"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>

    <TableRow
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginBottom="@dimen/margin_34">

        <TextView
                android:text="@string/type_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_stax_type"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>

    <TableRow
            android:id="@+id/recipInstitutionRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/institution_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <com.hover.stax.views.Stax2LineItem
            android:id="@+id/details_institution"
            android:layout_weight="1"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
            android:id="@+id/recipientRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:id="@+id/details_recipient_label"
                android:text="@string/recipient_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <com.hover.stax.views.Stax2LineItem
                android:id="@+id/details_recipient"
                android:layout_weight="1"
                android:textAlignment="viewEnd" />

    </TableRow>

    <TableRow
            android:id="@+id/amountRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/transfer_amount_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_amount"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>

    <TableRow
            android:id="@+id/feeRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:id="@+id/details_fee_label"
                android:text="@string/transaction_fee"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <TextView
                android:id="@+id/details_fee"
                android:layout_weight="1"
                android:text=" - "
                android:textAlignment="viewEnd"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />
    </TableRow>

    <TableRow
            android:id="@+id/confirmCodeRow"
            android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/id_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <include android:id="@+id/confirmCodeCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            layout="@layout/stax_copiable_text_layout"/>
    </TableRow>

    <TableRow android:layout_marginTop="@dimen/margin_18">

        <TextView
                android:text="@string/stax_id_label"
                android:textColor="@color/offWhite"
                android:textSize="@dimen/text_16" />

        <include
                android:id="@+id/details_stax_uuid"
                layout="@layout/stax_copiable_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end" />

    </TableRow>

</TableLayout>
