<?xml version="1.0" encoding="utf-8"?>
<com.hover.stax.views.StaxCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:title="@string/req_cardhead"
	app:showBack="true">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_3">

		<TableRow android:id="@+id/amountRow">
			<TextView
			    android:text="@string/amount_cardhead"
			    android:textColor="@color/offWhite"
			    android:fontFamily="font-normal"
			    android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/amountValue"
			    android:layout_weight="1"
			    android:fontFamily="font-normal"
			    android:textColor="@color/offWhite"
			    android:textSize="@dimen/text_21"
			    android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/requesteeRow" android:layout_marginTop="@dimen/margin_21" android:gravity="center_vertical">
			<TextView
				android:text="@string/reqfrom_label"
				android:textColor="@color/offWhite"
				android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<LinearLayout android:id="@+id/requesteeValueList"
				android:orientation="vertical"
				android:layout_weight="1" />
		</TableRow>

		<TableRow android:id="@+id/requesterAccountRow" android:layout_marginTop="@dimen/margin_21" android:gravity="center_vertical">
			<TextView
			    android:text="@string/requester_number_label"
			    android:textColor="@color/offWhite"
			    android:fontFamily="font-normal"
			    android:textSize="@dimen/text_16" />

			<com.hover.stax.views.Stax2LineItem
				android:id="@+id/account_value"
			    android:layout_weight="1"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/noteRow" android:layout_marginTop="@dimen/margin_21">
			<TextView
				android:text="@string/note_cardhead"
				android:textColor="@color/offWhite"
			    	android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/noteValue"
				android:layout_weight="1"
			    	android:fontFamily="font-normal"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/dateRow" android:layout_marginTop="@dimen/margin_21">
			<TextView
				android:text="@string/date_label"
				android:textColor="@color/offWhite"
				android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/dateValue"
				android:layout_weight="1"
				android:fontFamily="font-normal"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/frequencyRow" android:layout_marginTop="@dimen/margin_21">

			<TextView
				android:text="@string/repeatfreq_label"
				android:textColor="@color/offWhite"
			    	android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/frequencyValue"
				android:layout_weight="1"
				android:fontFamily="font-normal"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/endDateRow" android:layout_marginTop="@dimen/margin_21">

			<TextView
				android:text="@string/end_label"
				android:textColor="@color/offWhite"
			    	android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/endDateValue"
				android:layout_weight="1"
				android:fontFamily="font-normal"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/repeatTimesRow" android:layout_marginTop="@dimen/margin_21">

			<TextView
				android:text="@string/repeatnum_label"
				android:textColor="@color/offWhite"
			    	android:fontFamily="font-normal"
				android:textSize="@dimen/text_16" />

			<TextView android:id="@+id/repeatTimesValue"
				android:layout_weight="1"
				android:fontFamily="font-normal"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21"
				android:textAlignment="viewEnd" />
		</TableRow>
	</TableLayout>

	<RelativeLayout android:id="@+id/btnRow"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:layout_marginTop="@dimen/margin_21">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/edit_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_edit"
			android:layout_alignParentEnd="true"
			style="@style/StaxButton"
			android:fontFamily="font-medium" />
	</RelativeLayout>
</com.hover.stax.views.StaxCardView>