<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="-40dp"
	android:layout_marginBottom="0dp"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical">

	<TextView
		android:id="@+id/new_account_link"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/link_another"
	    android:fontFamily="font-medium"
	    android:textSize="@dimen/text_16"
	    android:visibility="gone"
	    android:textColor="@color/brightBlue"
	    android:padding="@dimen/margin_13"/>

	<com.hover.stax.views.StaxDropdownLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/channel_dropdown_input"
		android:editable="false"
		android:text="@string/channels_error_nodata"
		android:hint="@string/link_account" />
</FrameLayout>