<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2023 Stax
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.hover.stax.views.StaxCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/transferSummaryCard"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:showBack="true"
	app:title="@string/nav_merchant">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_10">

		<TableRow
			android:id="@+id/accountsRow"
			android:layout_marginTop="@dimen/margin_21">

			<TextView
				android:id="@+id/accountsLabel"
				android:text="@string/pay_with_label"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_16" />

			<com.hover.stax.views.Stax2LineItem
				android:id="@+id/account_value"
				android:layout_weight="1"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow
			android:id="@+id/recipientRow"
			android:layout_marginTop="@dimen/margin_21">

			<TextView
				android:text="@string/recipient_label"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_16" />

			<com.hover.stax.views.Stax2LineItem
				android:id="@+id/recipientValue"
				android:layout_weight="1"
				android:textAlignment="viewEnd" />
		</TableRow>

		<TableRow android:id="@+id/amountRow">

			<TextView
				android:text="@string/transfer_amount_label"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_16" />

			<TextView
				android:id="@+id/amountValue"
				android:layout_weight="1"
				android:textAlignment="viewEnd"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21" />
		</TableRow>

		<TableRow android:id="@+id/feeRow" android:visibility="gone">

			<TextView
				android:text="@string/transfer_fee_label"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_16" />

			<TextView
				android:id="@+id/feeValue"
				android:layout_weight="1"
				android:textAlignment="viewEnd"
				android:textColor="@color/offWhite"
				android:textSize="@dimen/text_21" />
		</TableRow>
	</TableLayout>

	<RelativeLayout
		android:id="@+id/btnRow"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_21"
		android:visibility="gone">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnRowId"
			style="@style/StaxButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:text="@string/btn_edit"
			android:visibility="visible" />
	</RelativeLayout>
</com.hover.stax.views.StaxCardView>